Progress on dark mode toggle issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,6 +228,133 @@ html {
 
 /*
 ------------------------
+    DAY-NIGHT SWITCH
+------------------------
+*/
+
+.switch{
+  position:relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input{
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #070D2D;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.rounded {
+  border-radius: 34px !important;
+}
+
+.slider.rounded:before {
+  border-radius: 50%;
+}
+
+body.darkmode{
+  background-color: #070D2D !important;
+  color: white !important;
+}
+
+.darkmodetext.text-dark, .darkmodetext p, body.darkmode .paperTitle{
+  color: white !important;
+}
+
+body.darkmode tr{
+  border-radius: 10px !important;
+  box-shadow: 2px 2px 10px #2f3fbb !important;
+  color: white ;
+}
+
+/* body.darkmode .bordered td{
+  padding: 16px !important;  
+} */
+
+/* body.darkmode #researchDetailsTable{
+  border-collapse: collapse !important;
+} */
+
+body.darkmode .heading1, .darkmodetext.main-heading, .darkmodetext.pre-heading{
+  filter: invert(100%) !important;
+}
+.night{
+  margin-left: 15% !important;
+  margin-top: 15%;
+  vertical-align: middle;
+  color: white;
+}
+
+.day{
+  margin-left: 15% !important;
+  margin-top: 15%;
+  vertical-align: middle;
+  color: yellow;
+}
+
+body.darkmode nav, body.darkmode .nav-link, body.darkmode input[type=submit]{
+  background-color: #2f3fbb !important;
+  color: #fff !important;
+}
+
+body.darkmode input[type=submit]{
+  border-bottom: 3px solid #fff;
+}
+
+body.darkmode .rounded-social-buttons .social-button{
+  background-color: #2f3fbb;
+}
+body.darkmode .rounded-social-buttons .social-button:hover{
+  background-color: white;
+  border: 3px solid #1728c9;
+}
+
+body.darkmode h6.display{
+  border-bottom: 3px solid #2f3fbb;
+}
+
+/*
+------------------------
     FOOTER SECTION
 ------------------------
 */
